@@ -10,8 +10,11 @@ import org.mockito.InjectMocks;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.ResultMatcher;
+import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import ru.hogwarts.school.controller.AvatarController;
 import ru.hogwarts.school.controller.FacultyController;
 import ru.hogwarts.school.controller.StudentController;
@@ -21,12 +24,12 @@ import ru.hogwarts.school.repository.StudentRepository;
 import ru.hogwarts.school.service.StudentService;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest
 public class StudentWebMvcTest {
@@ -63,17 +66,16 @@ public class StudentWebMvcTest {
         testFaculty.setColor("Red");
         testStudent.setFaculty(testFaculty);
 
-        List<Student> l = List.of(testStudent);
-        Collection<Student> c = Collections.unmodifiableList(l);
+        List<Student> listForTest = List.of(testStudent);
+        Collection<Student> collectionForTest = listForTest;
+        //  when(studentService.addStudent(any(Student.class))).thenReturn(testStudent);
 
-//        when(studentService.createStudent(any(Student.class))).thenReturn(testStudent);
-//        when(studentService.editStudent(any(Student.class))).thenReturn(ResponseEntity.ok(testStudent));
 //        when(studentService.deleteStudent(any(Long.class))).thenReturn(ResponseEntity.ok().build());
-//       // when(studentService.findStudentByAge(any(int.class), any(int.class))).thenReturn(ResponseEntity.ok(c));
+//
 //        when(studentService.getFaculty(any(Long.class))).thenReturn(ResponseEntity.ok(testFaculty));
 //        when(studentService.getStudentCount()).thenReturn(1);
 //        when(studentService.getAverageAge()).thenReturn(19);
-//        when(studentService.getLastStudent()).thenReturn(l);
+//        when(studentService.getLastStudent()).thenReturn(listForTest);
     }
 
     @Test
@@ -81,8 +83,113 @@ public class StudentWebMvcTest {
         Assertions.assertThat(studentController).isNotNull();
     }
 
-//    @Test
-//    public void createStudentTest() throws Exception {
+    @Test
+    public void createStudentTest() throws Exception {
+
+        JSONObject studentObject = new JSONObject();
+        studentObject.put("name", "Jiny");
+        studentObject.put("id", 33);
+        studentObject.put("age", 19);
+
+
+        Student testStudent = new Student();
+        testStudent.setId(33l);
+        testStudent.setName("Jiny");
+        testStudent.setAge(19);
+
+        when(studentService.addStudent(any(Student.class))).thenReturn(testStudent);
+        mockMvc.perform(MockMvcRequestBuilders
+                        .post("/student")
+                        .content(studentObject.toString())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.name").value("Jiny"))
+                .andExpect(jsonPath("$.age").value(19));
+    }
+
+    @Test
+    public void editStudentTest() throws Exception {
+        JSONObject studentObject = new JSONObject();
+        studentObject.put("name", "Jiny");
+        studentObject.put("id", 33);
+        studentObject.put("age", 19);
+
+
+        Student testStudent = new Student();
+        testStudent.setId(33l);
+        testStudent.setName("Jiny");
+        testStudent.setAge(19);
+        when(studentService.editStudent(any(Student.class))).thenReturn(testStudent);
+
+        mockMvc.perform(MockMvcRequestBuilders
+                        .put("/student")
+                        .content(studentObject.toString())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath(("$.id")).value(33l))
+                .andExpect(jsonPath(("$.name")).value("Jiny"))
+                .andExpect(jsonPath(("$.age")).value(19));
+    }
+
+    @Test
+    public void findStudentByAgeTest() throws Exception {
+        JSONObject studentObject = new JSONObject();
+        studentObject.put("name", "Jiny");
+        studentObject.put("id", 33);
+        studentObject.put("age", 19);
+
+        Student testStudent = new Student();
+        testStudent.setId(33l);
+        testStudent.setName("Jiny");
+        testStudent.setAge(19);
+
+        List<Student> listForTest = List.of(testStudent);
+
+        when(studentService.findByAgeBetween(1, 100)).thenReturn((Collection<Student>) listForTest);
+
+        mockMvc.perform(MockMvcRequestBuilders
+                        .get("/student/byAgeBetween?min=1&max=100")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    public void getFacultyTest() throws Exception {
+        JSONObject facultyObject = new JSONObject();
+        facultyObject.put("name", "MTT");
+        facultyObject.put("id", 66l);
+        facultyObject.put("color", "Red");
+
+        Student testStudent = new Student();
+        testStudent.setId((long) 33);
+        testStudent.setName("Jiny");
+        testStudent.setAge(19);
+
+        Faculty testFaculty = new Faculty();
+        testFaculty.setId(66);
+        testFaculty.setName("MTT");
+        testFaculty.setColor("Red");
+
+
+        when(studentService.getFaculty(any(Long.class))).thenReturn(testFaculty);
+
+        mockMvc.perform(MockMvcRequestBuilders
+                        .get("/student/" + 33 + "/getFaculty")
+                        .content(facultyObject.toString())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(66l))
+                .andExpect(jsonPath("$.color").value("Red"))
+                .andExpect(jsonPath("$.name").value("MTT"));
+    }
+
+    @Test
+    public void getStudentCount() throws Exception {
+
 //        JSONObject studentObject = new JSONObject();
 //        studentObject.put("name", "Jiny");
 //        studentObject.put("id", 33);
@@ -92,119 +199,45 @@ public class StudentWebMvcTest {
 //        testStudent.setId(33l);
 //        testStudent.setName("Jiny");
 //        testStudent.setAge(19);
-//
-//        Faculty testFaculty = new Faculty();
-//        testFaculty.setId(66);
-//        testFaculty.setName("MTT");
-//        testFaculty.setColor("Red");
-//        testStudent.setFaculty(testFaculty);
-//
-//        List<Student> l = List.of(testStudent);
-//        Collection<Student> c = Collections.unmodifiableList(l);
-//
-//
-//        when(studentController.createStudent(any(Student.class))).thenReturn(testStudent);
-//        when(studentController.editStudent(any(Student.class))).thenReturn(ResponseEntity.ok(testStudent));
-//        when(studentController.deleteStudent(any(Long.class))).thenReturn(ResponseEntity.ok().build());
-//        when(studentController.findStudentByAge(any(int.class), any(int.class))).thenReturn(ResponseEntity.ok(c));
-//        when(studentController.getFaculty(any(Long.class))).thenReturn(ResponseEntity.ok(testFaculty));
-//        when(studentController.getStudentCount()).thenReturn(1);
-//        when(studentController.getAverageAge()).thenReturn(19);
-//        when(studentController.getLastStudent()).thenReturn(l);
-//
-//        mockMvc.perform(MockMvcRequestBuilders
-//                        .post("/student")
-//                        .content(studentObject.toString())
-//                        .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//                .andExpect(status().isOk())
-//                .andExpect(jsonPath(("$.id")).value(33l))
-//                .andExpect(jsonPath(("$.name")).value("Jiny"))
-//                .andExpect(jsonPath(("$.age")).value(19));
-//    }
 
-//    @Test
-//    public void editStudentTest() {
-//    mockMvc.perform(MockMvcRequestBuilders
-//            .put("/student")
-//            .content(studentObject.toString())
-//            .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//            .andExpect(status().isOk())
-//            .andExpect(jsonPath(("$.id")).value(33l))
-//            .andExpect(jsonPath(("$.name")).value("Jiny"))
-//            .andExpect(jsonPath(("$.age")).value(19));
-//    }
-//    @Test
-//    public void findStudentByAgeTest() {
-//        JSONObject studentObject = new JSONObject();
-//        studentObject.put("name", "Jiny");
-//        studentObject.put("id", 33);
-//        studentObject.put("age", 19);
+        when(studentService.getStudentCount()).thenReturn(1);
 
-//        Student testStudent = new Student();
-//        testStudent.setId(33l);
-//        testStudent.setName("Jiny");
-//        testStudent.setAge(19);
+        mockMvc.perform(MockMvcRequestBuilders
+                        .get("/student/count")
+                        //.content(studentObject.toString())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk());
+               // .andExpect(1);
+    }
 
-//        Faculty testFaculty = new Faculty();
-//        testFaculty.setId(66);
-//        testFaculty.setName("MTT");
-//        testFaculty.setColor("Red");
-//        testStudent.setFaculty(testFaculty);
+    @Test
+    public void getAverageAge() throws Exception {
+        when(studentService.getAverageAge()).thenReturn(19);
+        mockMvc.perform(MockMvcRequestBuilders
+                        .get("/student/averageAge")
+                        //.content(studentObject.toString())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                        .andExpect(status().isOk());
+               // .andExpect(19);
+    }
 
-//        List<Student> l = List.of(testStudent);
-//        Collection<Student> c = Collections.unmodifiableList(l);
-
-//        mockMvc.perform(MockMvcRequestBuilders
-//                .get("/student/byAgeBetween")
-//                .content(studentObject.toString())
-//            .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//            .andExpect(status().isOk())
-//            .andExpect(c);
-//    }
-//    @Test
-//    public void  getFaculty() {
-//        mockMvc.perform(MockMvcRequestBuilders
-//                        .get("/student/{studentId}/getFaculty")
-//                        .content(studentObject.toString())
-//                        .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//                .andExpect(status().isOk())
-//                .andExpect(jsonPath(("$.id")).value(66l))
-//                .andExpect(jsonPath(("$.color")).value("Red"))
-//                .andExpect(jsonPath(("$.name")).value("MTT"));
-//    }
-//    @Test
-//    public void getStudentCount() {
-//    mockMvc.perform(MockMvcRequestBuilders
-//            .get("/student/count")
-//            .content(studentObject.toString())
-//            .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//            .andExpect(status().isOk())
-//            .andExpect(1)
-//    ;
-
-//    }
-//    @Test
-//    public void getAverageAge() {
-//        mockMvc.perform(MockMvcRequestBuilders
-//                        .get("/student/averageAge")
-//                        .content(studentObject.toString())
-//                        .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//                .andExpect(19);
-//    }
-//    @Test
-//    public void getLastStudent() {
-//        mockMvc.perform(MockMvcRequestBuilders
-//                        .get("/student/last")
-//                        .content(studentObject.toString())
-//                        .contentType(MediaType.APPLICATION_JSON)
-//                        .accept(MediaType.APPLICATION_JSON))
-//                .andExpect(l);
-//    }
+    @Test
+    public void getLastStudent() throws Exception {
+        Student testStudent = new Student();
+        testStudent.setId((long) 33);
+        testStudent.setName("Jiny");
+        testStudent.setAge(19);
+        List<Student> listForTest = List.of(testStudent);
+        when(studentService.getLastStudent()).thenReturn(listForTest);
+        mockMvc.perform(MockMvcRequestBuilders
+                        .get("/student/last")
+                     //   .content(studentObject.toString())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk());
+              //  .andExpect((ResultMatcher) listForTest);
+    }
 
 }
